navbar is now fixed to the top on mobile view

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -5,7 +5,13 @@
   position: sticky !important;
   top: 0;
 }
-#mobileNavBar {
+
+.navbar {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+#mobileNavMenu {
   position: absolute;
   left: 0;
   width: 100%;
